# guide_C-

./: README.md  main  main.cpp  main.lst
cmake_tutor/: README.md
first_bot/: CMakeLists.txt  README.md
first_bot/bot/app/: main.cpp
first_bot/tests/: test_test.cpp
first_bot/utils/include/: test.hpp
first_bot/utils/src/: test.cpp
git_tutorial/: README.md
simple_calculator/: CMakeLists.txt
simple_calculator/app/: main.cpp
simple_calculator/include/: utils.hpp
simple_calculator/src/: utils.cpp
string_tutor/: README.md
